Fix avatar alignment
Close #10

--- a/app/assets/stylesheets/avatar.scss
+++ b/app/assets/stylesheets/avatar.scss
@@ -1,6 +1,6 @@
 .user-avatar {
 
-  .wrapper {
+  .avatar-wrapper {
     display: flex;
     align-items: center;
     text-decoration: none;
